--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     },
     "./package.json": "./package.json"
   },
+  "type": "module",
   "main": "./dist/index.js",
   "module": "./dist/index.mjs",
   "types": "./dist/types/index.d.ts",
@@ -26,7 +27,10 @@
     "dist"
   ],
   "scripts": {
-    "build": "tsup --clean && yarn build:types",
+    "preview": "vite preview",
+    "start": "npm run dev",
+    "dev": "vite",
+    "build": "tsup --clean && yarn build:types && vite build",
     "build:docs": "typedoc",
     "build:types": "tsc --project tsconfig.build.json",
     "lint": "yarn lint:eslint && yarn lint:constraints && yarn lint:misc --check && yarn lint:dependencies --check && yarn lint:changelog",
@@ -50,8 +54,11 @@
     "@metamask/eslint-config-typescript": "^12.1.0",
     "@types/jest": "^28.1.6",
     "@types/node": "^16",
+    "@types/react": "^18",
+    "@types/react-dom": "^18",
     "@typescript-eslint/eslint-plugin": "^5.43.0",
     "@typescript-eslint/parser": "^5.43.0",
+    "@vitejs/plugin-react": "^4.2.1",
     "@yarnpkg/types": "^4.0.0-rc.52",
     "depcheck": "^1.4.3",
     "eslint": "^8.44.0",
@@ -70,7 +77,8 @@
     "ts-node": "^10.7.0",
     "tsup": "^7.2.0",
     "typedoc": "^0.23.15",
-    "typescript": "~4.8.4"
+    "typescript": "~4.8.4",
+    "vite": "^5.2.9"
   },
   "packageManager": "yarn@4.1.1",
   "engines": {
@@ -85,5 +93,9 @@
       "@lavamoat/preinstall-always-fail": false,
       "tsup>esbuild": true
     }
+  },
+  "dependencies": {
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
   }
 }
