--- a/package.json
+++ b/package.json
@@ -71,14 +71,18 @@
     "eslint-plugin-promise": "^6.1.1",
     "jest": "^28.1.3",
     "jest-it-up": "^2.0.2",
+    "postcss": "^8.4.38",
+    "postcss-preset-mantine": "^1.14.4",
+    "postcss-simple-vars": "^7.0.1",
     "prettier": "^2.7.1",
     "prettier-plugin-packagejson": "^2.3.0",
     "ts-jest": "^28.0.7",
     "ts-node": "^10.7.0",
     "tsup": "^7.2.0",
     "typedoc": "^0.23.15",
-    "typescript": "~4.8.4",
-    "vite": "^5.2.9"
+    "typescript": "^5.4.5",
+    "vite": "^5.2.9",
+    "vite-plugin-singlefile": "^2.0.1"
   },
   "packageManager": "yarn@4.1.1",
   "engines": {
@@ -91,11 +95,17 @@
   "lavamoat": {
     "allowScripts": {
       "@lavamoat/preinstall-always-fail": false,
-      "tsup>esbuild": true
+      "tsup>esbuild": true,
+      "vite>esbuild": false
     }
   },
   "dependencies": {
+    "@mantine/core": "^7.8.0",
+    "@mantine/hooks": "^7.8.0",
+    "@tabler/icons-react": "^3.2.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react18-json-view": "^0.2.8",
+    "wouter": "^3.1.2"
   }
 }
