--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "@metamask/metamask-module-template",
+  "name": "@open-rpc/html-reporter-react",
   "version": "0.0.0",
-  "description": "The MetaMask Node module template",
-  "homepage": "https://github.com/MetaMask/metamask-module-template#readme",
+  "description": "A react app for rendering @open-rpc/test-coverage reports",
+  "homepage": "https://github.com/open-rpc/html-reporter-react",
   "bugs": {
-    "url": "https://github.com/MetaMask/metamask-module-template/issues"
+    "url": "https://github.com/open-rpc/html-reporter-react"
   },
   "repository": {
     "type": "git",
